fix(projects): spacing on list on homepage

--- a/themes/shiro/assets/src/sass/css/scss/objects/_home-projects.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_home-projects.scss
@@ -22,10 +22,20 @@
 
 .home-project-list-item {
   position: relative;
+
+  h2 {
+    margin: 1rem 0;
+    @include font-size(23, 20);
+  }
 }
 
 .home-project-list-item--gray {
   background: $wmui-color-base90;
+
+  .h3 {
+    margin-bottom: 0;
+    @include font-size(17, 15);
+  }
 }
 
 
@@ -63,8 +73,8 @@
 
   @media (min-width: $medium-bp) {
     position: absolute;
-    right: 40px;
-    bottom: 40px;
-    left: 40px;
+    right: 20px;
+    left: 20px;
+    top: 40px;
   }
 }
